Final build for bioRxiv submission

--- a/content/05.methods.md
+++ b/content/05.methods.md
@@ -1,5 +1,5 @@
 ## Methods
-A tutorial for how to use Metaboverse can be found at metaboverse.readthedocs.io/getting-started.
+A tutorial for how to use Metaboverse can be found at https://metaboverse.readthedocs.io/en/latest/content/general-usage.html.
 
 ### 1. Network curation
 Biological networks are curated using the current version of the Reactome database. In particular, the pathway records for each species, complex component and interaction data, Ensembl, and UniProt Reactome mapping tables are integrated into the network database for Metaboverse. Additionally, the ChEBI and The Human Metabolome databases are also referenced for metabolite synonym mapping [@doi:10.1093/nar/gkv1031; @doi:10.1093/nar/gkx1089]. These data are used to generate a series of mapping dictionaries for entities to reactions and reactions to pathways for the curation of the global network.
@@ -11,7 +11,7 @@ After the network is curated for the user-specified organism, each node's degree
 ### 2. Data overlay and broadcasting for missing entities
 In order to overlay user data on the global network, first, user-provided gene expression, protein abundance, and/or metabolite abundances' names are mapped to Metaboverse compatible identifiers. For components that Metaboverse is unable to map, a list will be returned to the user so they can provide alternative names to aid in mapping. Second, provided data values are mapped to the appropriate nodes in the network. In cases where gene expression data are available, but protein abundance data is missing, Metaboverse will take the average of the available gene expression values to broadcast to the protein node. For complexes, all available component values (metabolites, proteins, etc.) are averaged. Nodes for which values were inferred will be marked by a dashed border during visualization to clearly show which values are known and which were inferred. Statistical values are derived from the highest value of the components (assuming a scale of 1 denotes no statistical significance and 0 denotes high statistical significance).
 
-### 3. Collapsing reactions with missing expression or abundance user data
+### 3. Collapsing reactions with missing expression or abundance values in user data
 After data mapping is complete, Metaboverse will generate a collapsed network representation for optional viewing during later visualization. We did, however, choose to enforce a limit of up to three reactions that can be collapsed as data down a pathway should be inferred only so far. We also enforced certain parameters for reaction collapse as follows:   
 
 1. If a reaction has at least one known or inferred value for inputs (substrates) and one known or inferred value for outputs (products), the reaction will be left as is. During the entire reaction collapse step, known catalysts are included when assessing whether a reaction has measured output values (more of a catalyst should lead to more output in most cases), and inhibitors are included when assessing whether the reaction has measured input values (more inhibitor should lead to an accumulation of input in most cases). Catalysts and inhibitors are not included when determining reaction neighbors, as described below.   
@@ -25,7 +25,7 @@ For pseudo-reactions, appropriate notes are included to describe the collapse. D
 ![
   **Reaction node collapse schematic.**
   (a) For reactions for which at least one input and at least one output component contain a measured value from the user data, the reaction will be maintained as is. (b) When an input of a reaction is known, but no output has a known value, Metaboverse will search for all neighboring reactions that contain identical inputs. If the neighboring reaction has a known output value, the two reactions will be merged into one pseudo-reaction. (c) When an output of a reaction is known, but no input has a known value, Metaboverse will search for all neighboring reactions that contain identical outputs. If the neighboring reaction has a known input value, the two reactions will be merged into one pseudo-reaction. (d) For reactions with no known values, neighbor pairs that match the inputs and outputs of the considered reaction will be evaluated for whether their respective outputs and inputs both have known values. If values are known for both neighbors, the three reactions will be merged into one pseudo-reaction. (e) As in (d), but if one neighbor does not contain a value and the other does contain a value, no reaction merging will be performed. (f) As in (d), but if neither neighbors contain known values, no reaction merging will be performed. An asterisk (*) indicates the target reaction being considered for a given reaction collapse. A red node indicates a reaction input or output with a measured value. A white node indicates a reaction input or output with no measured value. A gray node indicates a reaction. A gray node with a dashed border indicates a pseudo-reaction. A solid edge indicates a known relationship. A dashed edge indicates a relationship inferred via reaction merging.
-](./content/figures/collapse_schematic.png "Square image"){#fig:collapse_schematic}
+](./content/figures/collapse_schematic.png "Tall image"){#fig:collapse_schematic height=6in}
 
 ### 4. Regulatory pattern (motif) searches and sorting
 Metaboverse provides a variety of different regulatory patterns (motifs) for the user to explore. To identify a motif is to compare some value that is computed from a reaction or a pathway with a user-specified threshold.
@@ -56,7 +56,7 @@ Some performance optimization features are included by default to prevent comput
 To visualize a pathway, a user selects their pathway of choice, and all component reactions and their substrates, products, modifiers, and metadata are queried from the global network. Super-pathways help categorize these pathways and are defined as any pathway containing more than 200 nodes.
 
 #### 7.3 Visualizing timecourse and multiple condition experiments
-timecourse and multiple condition experiments are automatically detected from the user's input data. When the user provides these data and specifies the appropriate experimental parameters on the variable input page, they will have the option to provide time point or condition labels. Provided data should be listed in the data table in the same order that the labels are provided. Within all visualization modules, the data for each time point or condition can then be displayed using a slider bar, which will allow the user to cycle between time points or conditions.
+Timecourse and multiple condition experiments are automatically detected from the user's input data. When the user provides these data and specifies the appropriate experimental parameters on the variable input page, they will have the option to provide time point or condition labels. Provided data should be listed in the data table in the same order that the labels are provided. Within all visualization modules, the data for each time point or condition can then be displayed using a slider bar, which will allow the user to cycle between time points or conditions.
 
 #### 7.4 Visualizing compartments
 Compartments are derived from Reactome annotations. Compartment visualizations are generated using D3's hull plotting feature. Compartment boundaries are defined at the reaction levels and made to encompass each reaction's substrates, products, and modifiers for that given compartment.
@@ -65,9 +65,9 @@ Compartments are derived from Reactome annotations. Compartment visualizations a
 Annotations for each reaction are derived from the Reactome database. Pseudo-reactions annotations do not include this information; instead, they include notes on which reactions were collapsed to create the selected pseudo-reaction. All inferred pseudo-reactions and protein or complex values are displayed with dashed edges to differentiate them from measured values.
 
 #### 7.6 Additional features
-Metaboverse will continue to undergo development and new features will be added, but we will briefly highlight some additional features available at the time of publication. We encourage the user to check the documentation for more current updates and information regarding the use of Metaboverse [@url:https://metaboverse.readthedocs.io/en/latest].
+Metaboverse will continue to undergo development, and new features will be added, but we will briefly highlight some additional features available at the time of publication. We encourage the user to check the documentation for more current updates and information regarding the use of Metaboverse [@url:https://metaboverse.readthedocs.io/en/latest].
 
-##### 7.6a Toggle genes
+##### 7.6a Toggling genes
 As gene components can crowd the network visualization space, the user can toggle gene display on and off using the appropriate button. The network is then refreshed to either include or ignore gene components based on their node meta-tag.
 
 ##### 7.6b Toggling values
@@ -79,7 +79,7 @@ By default, reaction and feature labels are displayed by hovering the mouse over
 ##### 7.6d Toggling collapsed reactions
 By selecting the appropriate button, the user can toggle between displaying a full or collapsed pathway representation of the sub-network. By selecting this button, the network is refreshed using the appropriate reaction dictionary, where for visualization of the collapsed representation, a reaction with available pseudo-reactions substituted for the original reactions is included for network visualization.
 
-##### 7.6e View curated pathway image
+##### 7.6e Viewing curated pathway image
 Metaboverse visualizes networks dynamically, but the user may be more familiar or comfortable with classical, curated pathway layouts when exploring their data. For a given pathway network, the user can select the appropriate button, and Metaboverse will open a new window with the Reactome curated pathway layout.
 
 ##### 7.6f Saving network visualizations
@@ -89,10 +89,10 @@ The user can generate a PNG output file for any network created in Metaboverse b
 The number of nearest neighbors to visualize, or the limit to the number of edges a visualized node can have, can be modulated by the user using the appropriate input spaces. When visualizing a nearest neighbors network, Metaboverse will recursively fetch related reactions and their neighbors until the critical node display threshold is reached. This searching capability allows the user to visualize downstream effects of a change that may propagate across several reactions. The hub threshold option prevents the plotting of nodes with more than the specified number of edges. This thresholding is handled during the visualization process by excluding any entity nodes that meet these criteria as the neighborhood is propagated. This thresholding is particularly useful in removing hub nodes, such as water or protons, which may be less relevant to the user experience and can quickly clutter the network visualization. This feature can also help plot more extensive neighborhoods, as often neighborhoods quickly link to high-degree nodes, such as water, and limit visualization clarity.
 
 ##### 7.6h Metadata display
-To help inform the user of selection information and relevant metadata, a space in the legend bar during visualization is reserved for spaces where this information can be displayed, which is updated based on the user's input as it is provided.
+To help inform the user of selection information and relevant metadata, a space in the legend bar during visualization is reserved for displaying this information, which is updated based on the user's node selections.
 
 ### 8. Packaging
-The Metaboverse app is packaged using Electron. Back-end network curation and data processing is performed using Python and the NetworkX library. Front-end visualization is performed using Javascript and relies on the D3 and JQuery packages. Saving network representations to a PNG file is performed using the d3-save-svg and string-pixel-width packages (Table @tbl:dependencies). Documentation for Metaboverse is available at https://metaboverse.readthedocs.io. Continuous integration services are performed by Travis CI to routinely run test cases for each change made to the Metaboverse architecture. The Metaboverse source code can be accessed at https://github.com/Metaboverse/metaboverse. The code used to draft and revise this manuscript, as well as all associated scripts used to generate and visualize the data presented in this manuscript can be accessed at https://github.come/Metaboverse/manuscript.
+The Metaboverse app is packaged using Electron. Back-end network curation and data processing are performed using Python and the NetworkX library. Front-end visualization is performed using Javascript and relies on the D3 and JQuery packages. Saving network representations to a PNG file is performed using the d3-save-svg and string-pixel-width packages (Table @tbl:dependencies). Documentation for Metaboverse is available at https://metaboverse.readthedocs.io. Continuous integration services are performed by Travis CI to routinely run test cases for each change made to the Metaboverse architecture. The Metaboverse source code can be accessed at https://github.com/Metaboverse/metaboverse. The code used to draft and revise this manuscript, as well as all associated scripts used to generate and visualize the data presented in this manuscript can be accessed at https://github.come/Metaboverse/manuscript.
 
 | Name               | Reference                              |
 |--------------------|----------------------------------------|
@@ -123,11 +123,11 @@ Table: Dependencies table. {#tbl:dependencies}
 
 ##### RNA-sequencing sample preparation
 
-RNA sequencing data were generated by growing <i>Saccharomyces cerevisiae</i> biological replicates for strains <i>mct1</i>&Delta; (n=4) and wild-type (n=4). Briefly, cells were grown in glucose and switched to raffinose-supplemented growth medium for 0, 3, and 12 hours such that at the time of harvest, cultures were at OD<sub>600</sub>=1. Cultures were flash frozen and later total RNA was isolated using the Direct-zol kit (Zymo Research) with on-column DNase digestion and water elution. Sequencing libraries were prepared by purifying intact poly(A) RNA from total RNA samples (100-500 ng) with oligo(dT) magnetic beads, and stranded mRNA sequencing libraries were prepared as described using the Illumina TruSeq Stranded mRNA Library Preparation Kit (RS-122-2101, RS-122-2102). Purified libraries were qualified on an Agilent Technologies 2200 TapeStation using a D1000 ScreenTape assay (cat# 5067-5582 and 5067-5583). The molarity of adapter-modified molecules was defined by quantitative PCR using the Kapa Biosystems Kapa Library Quant Kit (cat#KK4824). Individual libraries were normalized to 5 nM, and equal volumes were pooled in preparation for Illumina sequence analysis. Sequencing libraries (25 pM) were chemically denatured and applied to an Illumina HiSeq v4 single read flow cell using an Illumina cBot. Hybridized molecules were clonally amplified and annealed to sequencing primers with reagents from an Illumina HiSeq SR Cluster Kit v4-cBot (GD-401-4001).  Following transfer of the flowcell to an Illumina HiSeq 2500 instrument (HCSv2.2.38 and RTA v1.18.61), a 50 cycle single-read sequence run was performed using HiSeq SBS Kit v4 sequencing reagents (FC-401-4002).
+RNA sequencing data were generated by growing <i>Saccharomyces cerevisiae</i> biological replicates for strains <i>mct1</i>&Delta; (n=4) and wild-type (n=4). Briefly, cells were grown in glucose and switched to raffinose-supplemented growth medium for 0, 3, and 12 hours such that at the time of harvest, cultures were at OD<sub>600</sub>=1. Cultures were flash-frozen, and later total RNA was isolated using the Direct-zol kit (Zymo Research) with on-column DNase digestion and water elution. Sequencing libraries were prepared by purifying intact poly(A) RNA from total RNA samples (100-500 ng) with oligo(dT) magnetic beads, and stranded mRNA sequencing libraries were prepared as described using the Illumina TruSeq Stranded mRNA Library Preparation Kit (RS-122-2101, RS-122-2102). Purified libraries were qualified on an Agilent Technologies 2200 TapeStation using a D1000 ScreenTape assay (cat# 5067-5582 and 5067-5583). The molarity of adapter-modified molecules was defined by quantitative PCR using the Kapa Biosystems Kapa Library Quant Kit (cat#KK4824). Individual libraries were normalized to 5 nM, and equal volumes were pooled in preparation for Illumina sequence analysis. Sequencing libraries (25 pM) were chemically denatured and applied to an Illumina HiSeq v4 single-read flow cell using an Illumina cBot. Hybridized molecules were clonally amplified and annealed to sequencing primers with reagents from an Illumina HiSeq SR Cluster Kit v4-cBot (GD-401-4001).  Following transfer of the flowcell to an Illumina HiSeq 2500 instrument (HCSv2.2.38 and RTA v1.18.61), a 50 cycle single-read sequence run was performed using HiSeq SBS Kit v4 sequencing reagents (FC-401-4002).
 
 ##### Sequence analysis
 
-Sequence FASTQ files were processed using XPRESSpipe [@doi:10.1371/journal.pcbi.1007625]. Batch and log files are available at [@url:https://github.com/Metaboverse/manuscript/tree/master/data/sce_mct1]. Notably, reads were trimmed of adapters (Read1: AGATCGGAAGAGCACACGTCTGAACTCCAGTCA, Read2: AGATCGGAAGAGCGTCGTGTAGGGAAAGAGTGT). Based on library complexity quality control, de-duplicated alignments were used for read quantification due to the high number of duplicated sequences in each library. Differential expression analysis was performed using DESeq2 [@doi:10.1186/s13059-014-0550-8] by comparing <i>mct1</i>&Delta; samples with wild-type samples at the 12-hour time-point to match the steady-state proteomics data. log<sub>2</sub>(fold change) and false discovery rate ("p-adj") values were extracted from the DESeq2 output.
+Sequence FASTQ files were processed using XPRESSpipe [@doi:10.1371/journal.pcbi.1007625]. Batch and log files are available at [@url:https://github.com/Metaboverse/manuscript/tree/master/data/sce_mct1_omics]. Notably, reads were trimmed of adapters (AGATCGGAAGAGCACACGTCTGAACTCCAGTCA). Based on library complexity quality control, de-duplicated alignments were used for read quantification due to the high number of duplicated sequences in each library. Differential expression analysis was performed using DESeq2 [@doi:10.1186/s13059-014-0550-8] by comparing <i>mct1</i>&Delta; samples with wild-type samples at the 12-hour time-point to match the steady-state proteomics data. log<sub>2</sub>(fold change) and false discovery rate ("p-adj") values were extracted from the DESeq2 output.
 
 ##### Proteomics analysis
 
@@ -135,7 +135,7 @@ Steady-state quantitative proteomics data were generated as described in [@doi:1
 
 ##### Metabolomics sample preparation
 
-Metabolomics data were generated by growing the appropriate yeast strains in synthetic minimal media (S-min) supplemented with 2% glucose until they reached OD<sub>600</sub> between 0.6-0.8 (n=6; except in one 3-hour wild-type sample, where n=5). Cells were then transferred to S-min media containing 2% raffinose and harvested after 0, 15, 30, 60, and 180 minutes (n=6/time-point/strain; except in one 3-hour wild-type sample, where n=5).
+Metabolomics data were generated by growing the appropriate yeast strains in synthetic minimal media (S-min) supplemented with 2% glucose until they reached OD<sub>600</sub> between 0.6-0.8 (n=6; except in one 3-hour wild-type sample, where n=5). Cells were then transferred to S-min media containing 2% raffinose and harvested after 0, 15, 30, 60, and 180 minutes (n=6/time-point/strain, except for the 3-hour wild-type samples, where n=5).
 
 ##### Metabolite extraction
 
@@ -143,11 +143,11 @@ A 75% boiling ethanol (EtOH) solution containing the internal standard d4-succin
 
 ##### Mass spectrometry analysis of samples
 
-All GC-MS analysis was performed with an Agilent 5977b GC-MS MSD-HES and an Agilent 7693A automatic liquid sampler. Dried samples were suspended in 40 µL of a 40 mg/mL O-methoxylamine hydrochloride (MOX) (MP Bio #155405) in dry pyridine (EMD Millipore #PX2012-7) and incubated for 1 hour at 37 °C in a sand bath. 25 µL of this solution were added to auto sampler vials. 60 µL of N-methyl-N-trimethylsilyltrifluoracetamide (MSTFA with 1%TMCS, Thermo #TS48913) were added automatically via the auto sampler and incubated for 30 minutes at 37 °C. After incubation, samples were vortexed, and 1 µL of the prepared sample was injected into the gas chromatograph inlet in the split mode with the inlet temperature held at 250 °C. A 10:1 split ratio was used for analysis of the majority of metabolites. For those metabolites that saturated the instrument at the 10:1 split concentration, a split of 50:1 was used for analysis. The gas chromatograph had an initial temperature of 60 °C for 1 minute followed by a 10 °C/min ramp to 325 °C and a hold time of 5 minutes. A 30-meter Phenomenex Zebron AB-5HT with 5m inert Guardian capillary column was employed for chromatographic separation. Helium was used as the carrier gas at a rate of 1 mL/min.
+All GC-MS analysis was performed with an Agilent 5977b GC-MS MSD-HES and an Agilent 7693A automatic liquid sampler. Dried samples were suspended in 40 µL of a 40 mg/mL O-methoxylamine hydrochloride (MOX) (MP Bio #155405) in dry pyridine (EMD Millipore #PX2012-7) and incubated for 1 hour at 37 °C in a sand bath. 25 µL of this solution were added to auto sampler vials. 60 µL of N-methyl-N-trimethylsilyltrifluoracetamide (MSTFA with 1%TMCS, Thermo #TS48913) were added automatically via the auto sampler and incubated for 30 minutes at 37 °C. After incubation, samples were vortexed, and 1 µL of the prepared sample was injected into the gas chromatograph inlet in the split mode with the inlet temperature held at 250 °C. A 10:1 split ratio was used for the analysis of the majority of metabolites. For those metabolites that saturated the instrument at the 10:1 split concentration, a split of 50:1 was used for the analysis. The gas chromatograph had an initial temperature of 60 °C for 1 minute followed by a 10 °C/min ramp to 325 °C and a hold time of 5 minutes. A 30-meter Phenomenex Zebron AB-5HT with 5m inert Guardian capillary column was employed for chromatographic separation. Helium was used as the carrier gas at a rate of 1 mL/min.
 
 ##### Analysis of mass spectrometry data
 
-Data were collected using MassHunter software (Agilent). Metabolites were identified and their peak area was recorded using MassHunter Quant. These data was transferred to an Excel spread sheet (Microsoft, Redmond WA). Metabolite identity was established using a combination of an in-house metabolite library developed using pure purchased standards, the NIST and Fiehn libraries. Resulting data from all samples were normalized to the internal standard d4-succinate. P-values were derived using a heteroscedastic, two-tailed Student's T-test and adjusted using the Benjamini-Hochberg correction procedure.
+Data were collected using MassHunter software (Agilent). Metabolites were identified, and their peak area was recorded using MassHunter Quant. These data were transferred to an Excel spreadsheet (Microsoft, Redmond WA). Metabolite identity was established using a combination of an in-house metabolite library developed using pure purchased standards, the NIST and Fiehn libraries. Resulting data from all samples were normalized to the internal standard d4-succinate. P-values were derived using a heteroscedastic, two-tailed Student's T-test and adjusted using the Benjamini-Hochberg correction procedure.
 
 #### 9.2 Human lung adenocarcinoma metabolomics
 Data were accessed from Metabolomics Workbench [@doi:10.21228/M8PG66] and processed as in our previous re-study of these data [@doi:10.1093/gigascience/giz137]. P-values were derived using a paired, two-tailed Student's T-test and adjusted using the Benjamini-Hochberg correction procedure.
@@ -158,6 +158,6 @@ Data were accessed from Metabolomics Workbench [@doi:10.21228/M8PG66] and proces
 
 The curated networks for these data are available at [@url:https://github.com/Metaboverse/manuscript/tree/master/data/sce_mct1]. Networks were generated by taking the 12-hour transcriptomics and proteomics datasets with their appropriate log<sub>2</sub>(fold change) and statistical values, along with the 0, 15, 30, 60, and 180 minute metabolomics datasets with their respective log<sub>2</sub>(fold change) and statistical values and layering these data on the <i>Saccharomyces cereviseae</i> global reaction network as curated by Metaboverse from the Reactome database. Reaction motifs and global connectivity analyses were performed within the Metaboverse platform.
 
-The Metaboverse source code is available at [@url:https://github.com/Metaboverse/Metaboverse] and archived versions can be accessed through the Zenodo link.
+The Metaboverse source code is available at https://github.com/Metaboverse/Metaboverse. The latest version of the software can be found at https://github.com/Metaboverse/Metaboverse/releases/latest.
 
-The source code and data for this manuscript and subsequent analyses is available at [@url:https://github.com/Metaboverse/manuscript] and archived versions can be accessed through the Zenodo link.
+The source code and data for this manuscript and the subsequent analyses are available at [@url:https://github.com/Metaboverse/manuscript].
